Closed Bug 1342244 Opened 7 years ago Closed 7 years ago

WrapperFactory::Rewrap shouldn't call CompartmentPrivate::Get all the time

Categories

(Core :: XPConnect, defect)

36 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch inline_rewrap_a_bit.diff (obsolete) — Splinter Review
      No description provided.
Attachment #8840621 - Flags: review?(bobbyholley)
Attachment #8840621 - Flags: review?(bobbyholley) → review+
Ah, Bug 1322273 moved part of the relevant code.
Attached patch v2Splinter Review
Attachment #8840621 - Attachment is obsolete: true
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/41d90dc1a067
try to avoid extra CompartmentPrivate::Get calls during Rewrap, r=bholley
https://hg.mozilla.org/mozilla-central/rev/41d90dc1a067
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: