Bug 1342244, try to avoid extra CompartmentPrivate::Get calls during Rewrap, r=bholley